--- a/custom_components/clockwork/translations/en.json
+++ b/custom_components/clockwork/translations/en.json
@@ -143,7 +143,7 @@
       },
       "delete_confirm": {
         "title": "Confirm Deletion",
-        "description": "Are you sure you want to delete the calculation '{name}' ({type})?"
+        "description": "Are you sure you want to delete the calculation {name} ({type})?"
       }
     }
   }
