--- a/custom_components/clockwork/translations/en.json
+++ b/custom_components/clockwork/translations/en.json
@@ -14,14 +14,45 @@
     },
     "abort": {
       "already_configured": "Clockwork is already configured",
-      "no_calculations": "No calculations to delete"
+      "no_calculations": "No calculations to delete",
+      "no_custom_holidays": "No custom holidays to modify or delete",
+      "unsupported_calculation_type": "Unsupported calculation type",
+      "sensor_added": "Calculation added successfully",
+      "sensor_updated": "Calculation updated successfully",
+      "sensor_deleted": "Calculation deleted successfully",
+      "custom_holiday_added": "Custom holiday added successfully",
+      "custom_holiday_updated": "Custom holiday updated successfully",
+      "custom_holiday_deleted": "Custom holiday deleted successfully"
     }
   },
   "options": {
     "step": {
       "init": {
         "title": "Clockwork Calculations",
-        "description": "Add and manage date/time calculations"
+        "description": "Add and manage date/time calculations",
+        "menu_options": {
+          "add_calculation": "Add Calculation",
+          "modify_calculation": "Modify Calculation",
+          "delete_calculation": "Delete Calculation",
+          "custom_holiday": "Add Custom Holiday",
+          "modify_custom_holiday": "Modify Custom Holiday",
+          "delete_custom_holiday": "Delete Custom Holiday"
+        }
+      },
+      "add_calculation": {
+        "title": "Add Calculation",
+        "description": "Choose the type of calculation to add",
+        "menu_options": {
+          "timespan": "Timespan Calculation",
+          "offset": "Offset Calculation",
+          "datetime_offset": "Datetime Offset",
+          "date_range": "Date Range Duration",
+          "season": "Season Detection",
+          "month": "Month Detection",
+          "holiday": "Holiday Countdown",
+          "between_dates": "Between Dates Check",
+          "outside_dates": "Outside Dates Check"
+        }
       },
       "timespan": {
         "title": "Timespan Calculation",
@@ -29,7 +60,13 @@
         "data": {
           "name": "Calculation Name",
           "entity_id": "Entity to Monitor",
+          "track_state": "Track State",
+          "update_interval": "Update Interval (seconds)",
           "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "track_state": "Which state to track: 'on' (turns ON), 'off' (turns OFF), or 'both' (any state change)",
+          "update_interval": "How often to update the timespan value (in seconds). Minimum 1 second. Default: 60 seconds."
         }
       },
       "offset": {
@@ -77,6 +114,9 @@
           "name": "Calculation Name",
           "season": "Season",
           "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "season": "Choose: spring, summer, autumn, or winter"
         }
       },
       "month": {
@@ -86,6 +126,9 @@
           "name": "Calculation Name",
           "months": "Months (comma-separated: 1-12)",
           "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "months": "Example: 12,1,2 for winter months"
         }
       },
       "holiday": {
@@ -96,6 +139,9 @@
           "holiday": "Holiday",
           "offset": "Day Offset (optional)",
           "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "holiday": "Choose a US holiday: new_years_day, mlk_day, presidents_day, memorial_day, juneteenth, independence_day, labor_day, columbus_day, veterans_day, thanksgiving, christmas"
         }
       },
       "between_dates": {
@@ -123,7 +169,6 @@
         "description": "Add a custom holiday for use in holiday countdown calculations",
         "data": {
           "name": "Holiday Display Name",
-          "holiday_key": "Holiday Key (identifier)",
           "holiday_type": "Holiday Type",
           "month": "Month (1-12)",
           "day": "Day (1-31, for fixed holidays)",
@@ -131,11 +176,45 @@
           "weekday": "Weekday (0=Monday, 6=Sunday)"
         },
         "data_description": {
-          "holiday_key": "Unique identifier (e.g., 'easter_sunday')",
+          "name": "e.g., 'Easter Sunday' or 'My Birthday'",
           "holiday_type": "fixed: specific date | nth_weekday: Nth day of week in month | last_weekday: last occurrence",
           "occurrence": "Which occurrence of the weekday (1st, 2nd, 3rd, 4th, or 5th)",
           "weekday": "0=Monday, 1=Tuesday, 2=Wednesday, 3=Thursday, 4=Friday, 5=Saturday, 6=Sunday"
         }
+      },
+      "modify_calculation": {
+        "title": "Modify Calculation",
+        "description": "Select a calculation to modify"
+      },
+      "modify_custom_holiday": {
+        "title": "Modify Custom Holiday",
+        "description": "Select a custom holiday to modify"
+      },
+      "modify_custom_holiday_form": {
+        "title": "Modify Custom Holiday",
+        "description": "Update the custom holiday definition",
+        "data": {
+          "name": "Holiday Display Name",
+          "holiday_type": "Holiday Type",
+          "month": "Month (1-12)",
+          "day": "Day (1-31, for fixed holidays)",
+          "occurrence": "Occurrence (1-5, for nth weekday)",
+          "weekday": "Weekday (0=Monday, 6=Sunday)"
+        },
+        "data_description": {
+          "name": "e.g., 'Easter Sunday' or 'My Birthday'",
+          "holiday_type": "fixed: specific date | nth_weekday: Nth day of week in month | last_weekday: last occurrence",
+          "occurrence": "Which occurrence of the weekday (1st, 2nd, 3rd, 4th, or 5th)",
+          "weekday": "0=Monday, 1=Tuesday, 2=Wednesday, 3=Thursday, 4=Friday, 5=Saturday, 6=Sunday"
+        }
+      },
+      "delete_custom_holiday": {
+        "title": "Delete Custom Holiday",
+        "description": "Select a custom holiday to delete"
+      },
+      "delete_custom_holiday_confirm": {
+        "title": "Confirm Deletion",
+        "description": "Are you sure you want to delete the custom holiday {name} ({key})?"
       },
       "delete_calculation": {
         "title": "Delete Calculation",
@@ -144,6 +223,116 @@
       "delete_confirm": {
         "title": "Confirm Deletion",
         "description": "Are you sure you want to delete the calculation {name} ({type})?"
+      },
+      "modify_timespan": {
+        "title": "Modify Timespan Calculation",
+        "description": "Update the timespan calculation",
+        "data": {
+          "name": "Calculation Name",
+          "entity_id": "Entity to Monitor",
+          "track_state": "Track State",
+          "update_interval": "Update Interval (seconds)",
+          "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "track_state": "Which state to track: 'on' (turns ON), 'off' (turns OFF), or 'both' (any state change)",
+          "update_interval": "How often to update the timespan value (in seconds). Minimum 1 second. Default: 60 seconds."
+        }
+      },
+      "modify_offset": {
+        "title": "Modify Offset Calculation",
+        "description": "Update the offset calculation",
+        "data": {
+          "name": "Calculation Name",
+          "entity_id": "Entity to Monitor",
+          "offset": "Time Offset (e.g., '1 hour', '30 minutes')",
+          "offset_mode": "Behavior Mode",
+          "pulse_duration": "Pulse Duration (pulse mode only)",
+          "trigger_on": "Trigger Event",
+          "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "offset_mode": "pulse: turns ON for pulse_duration then OFF | duration: stays ON until trigger condition ends | latch: turns ON and stays ON",
+          "pulse_duration": "How long pulse stays ON (e.g., '5 minutes'). If not set, equals offset time.",
+          "trigger_on": "Which state change triggers: on (turns ON), off (turns OFF), or both (any state change). Applies to all modes."
+        }
+      },
+      "modify_datetime_offset": {
+        "title": "Modify Datetime Offset",
+        "description": "Update the datetime offset calculation",
+        "data": {
+          "name": "Calculation Name",
+          "datetime_entity": "Datetime Entity",
+          "offset": "Time Offset (e.g., '1 hour', '-30 minutes')",
+          "icon": "Icon (optional)"
+        }
+      },
+      "modify_date_range": {
+        "title": "Modify Date Range Duration",
+        "description": "Update the date range duration calculation",
+        "data": {
+          "name": "Calculation Name",
+          "start_datetime_entity": "Start Datetime Entity",
+          "end_datetime_entity": "End Datetime Entity",
+          "icon": "Icon (optional)"
+        }
+      },
+      "modify_season": {
+        "title": "Modify Season Detection",
+        "description": "Update the season detection calculation",
+        "data": {
+          "name": "Calculation Name",
+          "season": "Season",
+          "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "season": "Choose: spring, summer, autumn, or winter"
+        }
+      },
+      "modify_month": {
+        "title": "Modify Month Detection",
+        "description": "Update the month detection calculation",
+        "data": {
+          "name": "Calculation Name",
+          "months": "Months (comma-separated: 1-12)",
+          "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "months": "Example: 12,1,2 for winter months"
+        }
+      },
+      "modify_holiday": {
+        "title": "Modify Holiday Countdown",
+        "description": "Update the holiday countdown calculation",
+        "data": {
+          "name": "Calculation Name",
+          "holiday": "Holiday",
+          "offset": "Day Offset (optional)",
+          "icon": "Icon (optional)"
+        },
+        "data_description": {
+          "holiday": "Select a preset holiday, or define a custom date using 'Add Custom Holiday' option, then reference it here."
+        }
+      },
+      "modify_between_dates": {
+        "title": "Modify Between Dates Check",
+        "description": "Update the between dates check calculation",
+        "data": {
+          "name": "Calculation Name",
+          "start_datetime_entity": "Start Datetime Entity",
+          "end_datetime_entity": "End Datetime Entity",
+          "icon": "Icon (optional)"
+        }
+      },
+      "modify_outside_dates": {
+        "title": "Modify Outside Dates Check",
+        "description": "Update the outside dates check calculation",
+        "data": {
+          "name": "Calculation Name",
+          "start_datetime_entity": "Start Datetime Entity",
+          "end_datetime_entity": "End Datetime Entity",
+          "icon": "Icon (optional)"
+        }
       }
     }
   }
